Trello #93: Fix checkout footer text spacing

--- a/wp-content/themes/brooklyn-child/style.css
+++ b/wp-content/themes/brooklyn-child/style.css
@@ -1701,6 +1701,7 @@ body.writer-match-form #primary {
 
 .product-footer .learn-more-affirm p#learn-more {
 	display: inline;
+	margin-left: 3px;
 	font-size: 19px;
 	color: #000 !important;
 }
